--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </main>
   <footer>
     <p>Sponsored by</p>
-    <div>
+    <div class="logos">
       <img src="./assets/img/Trade-logo.png" alt="Trade-logo">
       <!-- <img src="./assets/img/Taitar-logo.png" alt="Taitar-logo"> -->
     </div>
