--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 							<td align="right">
 								<table width="100%" border="0" align="center" cellpadding="10" cellspacing="0" class="word">
 									<tr>
-										<td align="right"><span class="">點擊或掃描QRcode<br>
+										<td align="right"><span class="qrcode">點擊或掃描QRcode<br>
 												立即下載行動銀行App</span></td>
 									</tr>
 								</table>
