--- a/醫療人_網站html/index.html
+++ b/醫療人_網站html/index.html
@@ -136,8 +136,14 @@
 					<li data-target="#myCarousel" data-slide-to="2" class=""></li>-->
 					</ol>
 					<div class="carousel-inner" role="listbox">
-						<div class="item active"> <a href="https://www.kgibank.com/airloan/qr/entry/kbb2b145" target="new"><img
-									src="images/EDM-03.jpg" alt="" border="0"></a>
+						<div class="item active">
+							<div class="banner">
+								<a href="https://www.kgibank.com/airloan/qr/entry/kbb2b145" target="new">
+									<img src="images/EDM-03.jpg" alt="" border="0">
+								</a>
+								<a class="link-1" target="_blank" rel="noopener noreferrer" href="https://google.com"></a>
+								<a class="link-2" target="_blank" rel="noopener noreferrer" href="https://google.com"></a>
+							</div>
 							<div class="container">
 								<div class="carousel-caption">
 									<!--<h1>Example headline.</h1>
