--- a/0.01網站html/index.html
+++ b/0.01網站html/index.html
@@ -230,23 +230,20 @@
 			<div class="col-md-10 col-md-offset-1  wow animated fadeInUp">
 				<!--<h3 class="h2box_yellow">注意事項</span></h3>-->
 				<div id="accordion">
-					<h3>活動說明</h3>
+					<h3>注意事項</h3>
 					<div>
 						<ol style="font-size:14px;">
-							<li>活動期間：即日起~109年5月31日止。立約日起算一個月內動用，享90天4.99%優惠利率(自首次動用日起算)，優利資格及定義以本行系統註記為準。</li>
+							<li>本專案首月優惠利率0.01%，第二期起依原專案利率計算；本行薪轉戶另享開辦費減免我3,000元，適用本行既有薪轉戶與已在本行辦理薪資轉帳程序但該公司尚未撥薪者。</li>
 							<li>
-								速還金(循環信貸)年利率：5.99%~18.99%，貸款利率基準日：民國106年7月1日，利率差異將依據個別客戶過往信用評分有所不同。
+								總費用年百分率範例說明：貸款金額30萬，貸款期間5年，貸款利率前1個月0.01%(固我定利率)，第2個月起1.98%~18.71% ，各相關費用總金額7,000~8,000元，限定清償我期為18期，總費用年百分率為2.86%~19.25%。
 							</li>
-							<li>相關費用：(1)開辦費：0元。(2)帳務管理費：每次動用皆收取200元，每契約年度最高收取3,000元。(3)超商繳款手續費：每筆最高20元(實際金額請參閱凱基銀行貸款官網最新活動)。</li>
-							<li>「便利商店200元購物金」為多選一即享券限量800名，符合贈送資格之客戶可選擇7-ELEVEN、全家及萊爾富便利商店兌換(擇一前往兌換)。</li>
-							<li>符合便利商店200元購物金贈送資格者，本行將於每月10日結算前月符合動用資格之客戶，並於當月月底前以簡訊發送兌換連結、兌換密碼及兌換到期日至用戶留存於本行之手機門號，客戶可憑簡訊內指定通路進行兌換，兌換期限依票券上效期為準。</li>
-							<li>即享券兌換序號一經發放，本行不負保管責任，若遺失兌換序號，不得要求取消、兌現或補發；若贈品發送當下已解約亦不適用回饋資格。</li>
-							<li>上述活動凱基銀行保留詮釋、裁決與終止本活動辦法之權利，其他未盡事宜將於本行網站公告後實施。</li>
-							<li>本行保留核貸與否、核定貸款金額及各項貸款條件、利率及詮釋活動之權利。</li>
+							<li>本廣告揭露之年百分率係按主管機關備查之標準計算範例予以計算，總費用年百分率不我等於貸款利率，本行指數型利率於每年一、四、七、十月份之五日調整，遇例假日順延我至下一營業日，本總費用年百分率之計算基準日為109年4月6日。</li>
+							<li>本活動專案優惠期間至109/7/31，需綁約18個月。</li>
+							<li>各信用貸款專案內容及條件均不同，詳細內容依凱基銀行最新規定為準，相關內容及限我制條件請洽本行官網，本行保留核貸與否、詮釋、裁決及終止權利。</li>
 						</ol>
 					</div>
 				</div>
-				<div class="godownbut col-md-10 col-md-offset-1   wow animated fadeInUp text-center">
+				<!-- <div class="godownbut col-md-10 col-md-offset-1   wow animated fadeInUp text-center">
 					<a href="https://www.kgibank.com/airloan/qr/entry/kbb2b145" target="_blank"
 						class="btn btn-lg btn-default "><big><strong>
 								<font color="#652fad">立即申辦</font>
@@ -254,7 +251,7 @@
 						onclick="return confirmForword();" target="_blank" class="btn btn-lg btn-default "><big><strong>
 								<font color="#652fad">了解更多</font>
 							</strong></big></a>
-				</div>
+				</div> -->
 				<!--<div class="col-md-10 col-md-offset-1">
       	<h3 class=""><span class="label label-primary">現折200</span></h3>
       <p>活動時間：105/8/5~105/8/18</p>
