--- a/0.01網站html/index.html
+++ b/0.01網站html/index.html
@@ -230,8 +230,8 @@
 			<div class="col-md-10 col-md-offset-1  wow animated fadeInUp">
 				<!--<h3 class="h2box_yellow">注意事項</span></h3>-->
 				<div id="accordion">
-					<h3>注意事項</h3>
-					<div>
+					<h4 class="title">注意事項</h4>
+					<div class="content">
 						<ol style="font-size:14px;">
 							<li>本專案首月優惠利率0.01%，第二期起依原專案利率計算；本行薪轉戶另享開辦費減免我3,000元，適用本行既有薪轉戶與已在本行辦理薪資轉帳程序但該公司尚未撥薪者。</li>
 							<li>
