--- a/醫療人_網站html/index.html
+++ b/醫療人_網站html/index.html
@@ -230,8 +230,8 @@
 			<div class="col-md-10 col-md-offset-1  wow animated fadeInUp">
 				<!--<h3 class="h2box_yellow">注意事項</span></h3>-->
 				<div id="accordion">
-					<h3>注意事項</h3>
-					<div>
+					<h4 class="title">注意事項</h4>
+					<div class="content">
 						<ol style="font-size:14px;">
 							<li>醫護人員專案之醫療相關合格證照需檢附有效之身份證明(如：合格證書、識別證…等)；本專案之醫療院所係指醫學中心、區域醫院、教學醫院；最高額度600萬須符合一定年收入與信用評等。</li>
 							<li>全民適用專案首月優惠利率0.01%，第二期起依原專案利率計算；本行薪轉戶另享開辦費減免3,000元，適用本行既有薪轉戶與已在本行辦理薪資轉帳程序但該公司尚未撥薪者。</li>
